--- a/Sass/style.sass
+++ b/Sass/style.sass
@@ -1,7 +1,7 @@
 $color_black: #000
 $color_white: #fff
 $color_orange: #FF4B32
-
+$color_brown: #0D0402
 
 $font_josef: 'Josefin Sans'
 $font_open: 'Open Sans'
@@ -9,13 +9,16 @@ $font_poppins: 'Poppins'
 $font_bold: 700
 $font-semibold: 600
 $font_normal: 400
+
 *
     box-sizing: border-box
     padding: 0
     margin: 0
     list-style: none
     text-decoration: none
-
+a
+    text-decoration: none
+    color: $color_white
 h1, h2, h3, h4, h5, h6, p, ul, ol
     padding: 0
     margin: 0
@@ -27,7 +30,15 @@ input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button
     -webkit-appearance: none
     margin: 0
-
+=logo
+    font-family: $font_josef
+    font-size: 24px
+    font-weight: $font_bold
+    color: $color_orange
+    padding-left: 60px
+    padding-top: 15px
+    background: no-repeat left center url('images/logo-coffee.svg')
+    background-size: auto 100%
 
 header
     padding-top: 30px
@@ -49,14 +60,7 @@ header
         position: relative
         z-index: 2
         .logo
-            font-family: $font_josef
-            font-size: 24px
-            font-weight: $font_bold
-            color: $color_orange
-            padding-left: 60px
-            padding-top: 15px
-            background: no-repeat left center url('images/logo-coffee.svg')
-            background-size: auto 100%
+            +logo
         .navbar-nav
             width: 100%
             justify-content: space-between
@@ -220,11 +224,21 @@ header
     background-color: $color-black
     .container
         .follow
+            position: relative
             display: inline-block
             width: 100%
             text-align: center
             color: $color_orange
             margin-top: 100px
+            &::before
+                content: ""
+                position: absolute
+                bottom: -25px
+                left: 50%
+                transform: translateX(-50%)
+                width: 50%
+                height: 2px
+                background-color: $color_orange
         .text
             margin-top: 65px
             display: flex
@@ -237,6 +251,9 @@ header
             display: block
             text-align: center
             color: $color_white
+            font: $font_normal 24px $font_open
+            line-height: 1.5
+            padding-left: 40px
         .phone
             margin-top: 60px
         .email
@@ -246,7 +263,62 @@ header
             justify-content: space-between
             margin-top: 30px
             margin-bottom: 100px
+            color: $color_white
             li
-                width: 20%
-                height: 40px
-    
+                border: 1px solid rgba(250,250,250,0.3)
+                border-radius: 50%
+                font-size: 25px
+                display: flex
+                justify-content: center
+                align-items: center
+                transition: 0.3s
+                a
+                    display: flex
+                    width: 50px
+                    height: 50px
+                    justify-content: center
+                    align-items: center
+                &:hover
+                    border: 1px solid $color_white
+                    a
+                        color: $color_orange
+.news      
+    text-align: center         
+    .update-news
+        margin-top: 100px
+        font: $font_semibold 43px $font_josef
+        line-height: 56px
+    &-descr
+        margin-top: 20px
+        font: $font_normal 18px $font_open
+    &-cards
+        margin-top: 60px        
+        .new-card
+            border-radius: 20px
+            box-shadow: 10px 30px 80px 0px rgba(0, 0, 0, .4)
+            text-align: left
+            img
+                width: 100%
+                border-radius: 21px 21px 0px 0px
+            .news-name
+                font: $font_semibold 32px $font_josef
+                margin-left: 30px
+                margin-top: 30px
+            .news-descr
+                font: $font_normal 16px $font_open
+                margin-left: 30px
+                margin-top: 10px
+            .learn-more
+                display: inline-block
+                margin-left: 30px
+                color: $color_orange
+                font: $font_normal 16px $font_open
+                margin-top: 20px
+                margin-bottom: 30px
+footer
+    background-color: $color_brown
+    color: $color_white
+    padding-top: 60px
+    margin-top: 140px
+    .logo
+        +logo
