--- a/Sass/style.sass
+++ b/Sass/style.sass
@@ -5,9 +5,8 @@ $color_brown: #0D0402
 
 $font_josef: 'Josefin Sans'
 $font_open: 'Open Sans'
-$font_poppins: 'Poppins'
 $font_bold: 700
-$font-semibold: 600
+$font_semibold: 600
 $font_normal: 400
 
 *
@@ -30,6 +29,7 @@ input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button
     -webkit-appearance: none
     margin: 0
+
 =logo
     font-family: $font_josef
     font-size: 24px
@@ -39,6 +39,31 @@ input[type=number]::-webkit-outer-spin-button
     padding-top: 15px
     background: no-repeat left center url('images/logo-coffee.svg')
     background-size: auto 100%
+=icons-list
+    display: flex
+    justify-content: space-between
+    margin-top: 30px
+    margin-bottom: 100px
+    color: $color_white
+    li
+        border: 1px solid rgba(250,250,250,0.3)
+        border-radius: 50%
+        font-size: 25px
+        display: flex
+        justify-content: center
+        align-items: center
+        transition: 0.2s
+        a
+            display: flex
+            width: 50px
+            height: 50px
+            justify-content: center
+            align-items: center
+            transition: 0.2s
+        &:hover
+            border: 1px solid $color_white
+            a
+                color: $color_orange
 
 header
     padding-top: 30px
@@ -64,6 +89,9 @@ header
         .navbar-nav
             width: 100%
             justify-content: space-between
+            font-size: 18px
+            font-family: $font_open
+            font-weight: $font_normal
             a
                 color: $color_white
                 opacity: .8
@@ -100,6 +128,8 @@ header
                 cursor: pointer
                 background-color: $color_white
                 color: $color-orange
+        .cart
+            font-size: 26px
 .offers
     margin-top: 140px
     font: $font_semibold 18px $font_josef
@@ -230,69 +260,59 @@ header
 .contacts            
     margin-top: 140px
     background: no-repeat right bottom / auto 100% url(images/coffee-contact-bg.png), no-repeat left top / auto 90% url(images/bg-1.png)
-    background-color: $color_brown
-    .container
-        .follow
+    background-color: $color_brown    
+    .container  
+        position: relative            
+        .bg-cont
+            position: absolute
+            width: 60%
+            height: 100%
+            top: 0
+            left: 20%
+            background: repeat space url('images/Group 442.svg')
+            box-shadow: inset -40px -40px 70px $color_brown, inset 40px 40px 70px $color_brown
+            opacity: .05
+        .row
             position: relative
-            display: inline-block
-            width: 100%
-            text-align: center
-            color: $color_orange
-            margin-top: 100px
-            &::before
-                content: ""
-                position: absolute
-                bottom: -25px
-                left: 50%
-                transform: translateX(-50%)
-                width: 50%
-                height: 2px
-                background-color: $color_orange
-        .text
-            margin-top: 65px
-            display: flex
-            flex-direction: column
-            align-items: center
-            font: $font_semibold 43px $font_josef
-            color: $color_white
-            line-height: 56px
-        .phone, .email
-            display: block
-            text-align: center
-            color: $color_white
-            font: $font_normal 24px $font_open
-            line-height: 1.5
-            padding-left: 40px
-        .phone
-            margin-top: 60px
-            background: no-repeat 20% center / auto 100% url(images/phone.svg)
-        .email
-            margin-top: 25px
-            background: no-repeat 5% center / auto 85% url(images/mail.svg)
-        .icons-lists
-            display: flex
-            justify-content: space-between
-            margin-top: 30px
-            margin-bottom: 100px
-            color: $color_white
-            li
-                border: 1px solid rgba(250,250,250,0.3)
-                border-radius: 50%
-                font-size: 25px
+            .follow
+                position: relative
+                display: inline-block
+                width: 100%
+                text-align: center
+                color: $color_orange
+                margin-top: 100px
+                &::before
+                    content: ""
+                    position: absolute
+                    bottom: -25px
+                    left: 50%
+                    transform: translateX(-50%)
+                    width: 50%
+                    height: 2px
+                    background-color: $color_orange
+            .text
+                margin-top: 65px
                 display: flex
-                justify-content: center
+                flex-direction: column
                 align-items: center
-                transition: 0.3s
-                a
-                    display: flex
-                    width: 50px
-                    height: 50px
-                    justify-content: center
-                    align-items: center
-                &:hover
-                    border: 1px solid $color_white
-                    a
-                        color: $color_orange
+                font: $font_semibold 43px $font_josef
+                color: $color_white
+                line-height: 56px
+            .phone, .email
+                display: block
+                text-align: center
+                color: $color_white
+                font: $font_normal 24px $font_open
+                line-height: 1.5
+                padding-left: 40px
+            .phone
+                margin-top: 60px
+                background: no-repeat 20% center / auto 100% url(images/phone.svg)
+            .email
+                margin-top: 25px
+                background: no-repeat 5% center / auto 85% url(images/mail.svg)
+            .icons-lists
+                +icons-list
 .news      
     text-align: center         
     .update-news
@@ -330,6 +350,14 @@ header
                 &::after
                     content: ''
                     position: absolute
+                    bottom: -2px
+                    right: -20px
+                    height: 100%
+                    width: 25%
+                    background: no-repeat left center / auto 100% url(images/arrow.png)
+                &::before
+                    content: ''
+                    position: absolute
                     width: 0%
                     height: 2px
                     background-color: $color-orange
@@ -339,7 +367,7 @@ header
                     transform: translateY(2px)
                     transform-origin: left
                     opacity: 0
-                &:hover::after
+                &:hover::before
                     width: 120%
                     transform: translateY(0px)
                     opacity: 1
@@ -348,5 +376,51 @@ footer
     color: $color_white
     padding-top: 60px
     margin-top: 140px
-    .logo
-        +logo
+    font: $font_normal 18px $font_open
+    position: relative
+    .bg-foot
+        position: absolute
+        width: 100%
+        height: 100%
+        top: 0
+        left: 0
+        background: repeat space url('images/Group 442.svg')
+        box-shadow: inset -40px -40px 30px rgba(27, 25, 21, 0.9), inset 40px 40px 30px rgba(27, 25, 21, 0.9)
+        opacity: .05
+    .container
+        position: relative
+        .logo
+            +logo
+        .phone
+            background: no-repeat left center / auto 100% url(images/phone.svg)
+            padding-left: 30px
+        h6
+            font-size: 24px
+        .cat-item, .info-item
+            letter-spacing: .5px
+            margin-top: 20px
+            line-height: 27px
+            a
+                transition: .2s
+            a:hover
+                color: $color_orange
+        .rights
+            margin-top: 50px
+            padding-top: 25px
+            margin-bottom: 50px
+            position: relative
+            text-align: center
+            font: $font_normal 16px "Arial"
+            &::before
+                content: ''
+                position: absolute
+                left: 0
+                top: 0
+                width: 100%
+                height: 1px
+                background-color: #fff
+        .icons-lists
+            +icons-list
+            a
+                width: 40px
+                height: 40px
